2015-05-10  Mikey Austin  <mikey@greyd.org>

	* New blacklist PATRICIA trie storage for fast lookups
	* New BDB SQL, SQLite & MySQL storage drivers
	* Updated documentation for new drivers
	* Bug fixes.

2015-03-12  Mikey Austin  <mikey@greyd.org>

	* Hash performance tuning.
	* Added --with-ltdl-fix for distros with broken libltdl (credit to Ivan Agarkov (kreon))
	* Updated sync slave debug messages to be less chatty

2015-03-08  Mikey Austin  <mikey@greyd.org>

	* Minor internal refactoring & cleanups.
	* Cleanup the test framework and added support for unit testing through valgrind.
	* Added RPM packaging capabilities to build system.
	* Added RHEL-based init scripts.
	* Minor bug fixes & updates to default configuration file.

2015-02-06  Mikey Austin  <mikey@greyd.org>

	* Minor documentation fixes & updates.

2015-02-01  Mikey Austin  <mikey@greyd.org>

	* Added new SPF validation functionality.
	* Fixed some minor bugs.

2015-01-28  Mikey Austin  <mikey@greyd.org>

	* Added greyd_pidfile & greylogd_pidfile functionality
	* Added support for DragonFly BSD.

2015-01-24  Mikey Austin  <mikey@greyd.org>

	* Fixed issues with sending sync messages.
	* Fixed issue with firewall process not terminating at shutdown.
	* Added support for NetBSD.
	* Added support for FreeBSD.

2015-01-19  Mikey Austin  <mikey@greyd.org>

	* Refactored internal firewall access between greyd processes.

2015-01-10  Mikey Austin  <mikey@greyd.org>

	* Bug fixes in sync engine
	* Consistent default config path handling

2015-01-08  Mikey Austin  <mikey@greyd.org>

	* Minor bug fix in netfilter driver preventing greylogd from operating.

2015-01-07  Mikey Austin  <mikey@greyd.org>

	* New PF firewall driver and OpenBSD portability changes.
	* Small bug fixes in error reporting for useability.

2015-01-01  Mikey Austin  <mikey@greyd.org>

	* Initial development release of greyd.