@@ -55,7 +55,7 @@ Development Status
 ------------------
 
 **greyd** is fully functional and is under active development. All of the features from **spamd**
-have been implemented, including synchronization support. Additional features not found in **spamd** have also been implemented, such as **SPF** trapping & optional whitelisting, as well as sync support via greydb manual updates.
+have been implemented, including synchronization support. Additional features not found in **spamd** have also been implemented, such as **SPF** trapping & optional whitelisting, sync support via greydb and fast blacklist lookup via an internal radix trie.
 
 **greyd** is now fully sync compatible with **spamd**, which would allow, for example, an administrator to add a **greyd** instance into a cluster of existing **spamd** instances.
 
